# dotnet-issue-PAL_SEHException

./: .gitignore  CMakeLists.txt  README.md
Lib/: CMakeLists.txt  Entry.cs  Lib.csproj
Native/: SharedLib.cpp  main.cpp
Native/CoreCLR/: CMakeLists.txt
Native/CoreCLR/include/coreclr/: nethost.h
